# nsilo

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst  modules.rst  nsilo.rst
nsilo/: __init__.py  get.py  nsilo.py  nsilo_test.py  update.py
tests/: nsilo_test.py
