[tool.poetry]
name = "nsilo"
version = "0.1.0"
description = "Simple wrapper for NameSilo API"
authors = ["Nicholas Orta <nickorta12@gmail.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.6"
lxml = "^4.4"
requests = "^2.22"

[tool.poetry.dev-dependencies]
sphinx = "^2.2"
pytest = "^5.1"
sphinx-rtd-theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
